--- a/index.html
+++ b/index.html
@@ -14,6 +14,7 @@
 <link href="https://fonts.googleapis.com/css2?family=Noto+Sans:wght@400;700&display=swap" rel="stylesheet">
 <link rel="shortcut icon" href="https://i.ibb.co/BNjZ2tw/icon-apk.png" type="image/x-icon">
 <link rel="canonical" href="https://qqtoto.pages.dev">
+  <meta name="google-site-verification" content="ZB2LAtlgfTK0OGsyJEuzR0dZRV_9SzDlQ3u2_bDaqDg" />
 <title>QQTOTO 🔥 TOP NO.1 DI INDONESIA</title>
 <meta name="title" content="QQTOTO incaran para sloter indonesia.">
 <meta name="description" content="Ayo gabung bersama kami di QQTOTO, betting terkecil hanya 100 perak.">
